// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckoutForm renders properly 1`] = `
<div>
  <div>
    <p>
      1
       item
      
       
      $12.95
    </p>
  </div>
  <div
    class="checkoutForm__section current"
  >
    <h2>
      1. Shipping
    </h2>
  </div>
  <div>
    <form
      class="checkoutForm__form"
      data-testid="shipping-form"
    >
      <div
        class="checkoutForm__field"
      >
        <label
          for="firstName"
        >
          First Name
          <span
            class="required"
          >
            *
          </span>
        </label>
        <input
          id="firstName"
          name="firstName"
          type="text"
          value=""
        />
        <span
          class="checkoutForm__error"
        />
      </div>
      <div
        class="checkoutForm__field"
      >
        <label
          for="lastName"
        >
          Last Name
          <span
            class="required"
          >
            *
          </span>
        </label>
        <input
          id="lastName"
          name="lastName"
          type="text"
          value=""
        />
        <span
          class="checkoutForm__error"
        />
      </div>
      <div
        class="checkoutForm__field"
      >
        <label
          for="addressOne"
        >
          Address Line 1
          <span
            class="required"
          >
            *
          </span>
        </label>
        <input
          id="addressOne"
          name="addressOne"
          type="text"
          value=""
        />
        <span
          class="checkoutForm__error"
        />
      </div>
      <div
        class="checkoutForm__field"
      >
        <label
          for="addressTwo"
        >
          Address Line 2
        </label>
        <input
          id="addressTwo"
          name="addressTwo"
          type="text"
          value=""
        />
        <span
          class="checkoutForm__error"
        />
      </div>
      <div
        class="checkoutForm__field"
      >
        <label
          for="municipality"
        >
          Municipality
          <span
            class="required"
          >
            *
          </span>
        </label>
        <input
          id="municipality"
          name="municipality"
          type="text"
          value=""
        />
        <span
          class="checkoutForm__error"
        />
      </div>
      <div
        class="checkoutForm__field"
      >
        <label
          for="provinceTerritory"
        >
          Province/Territory
          <span
            class="required"
          >
            *
          </span>
        </label>
        <input
          id="provinceTerritory"
          name="provinceTerritory"
          type="text"
          value=""
        />
        <span
          class="checkoutForm__error"
        />
      </div>
      <div
        class="checkoutForm__field"
      >
        <label
          for="postalCode"
        >
          Postal Code
          <span
            class="required"
          >
            *
          </span>
        </label>
        <input
          id="postalCode"
          name="postalCode"
          type="text"
          value=""
        />
        <span
          class="checkoutForm__error"
        />
      </div>
      <h3>
        Shipping Method
      </h3>
      <div>
        <input
          checked=""
          class="checkoutForm__shippingOption"
          id="standard"
          name="shipping"
          type="radio"
          value="standard"
        />
        <label
          for="standard"
        >
          Standard
        </label>
        <input
          class="checkoutForm__shippingOption"
          id="express"
          name="shipping"
          type="radio"
          value="express"
        />
        <label
          for="express"
        >
          Express
        </label>
      </div>
      <div
        class="checkoutForm__field"
      >
        <label
          for="phone"
        >
          Phone Number
          <span
            class="required"
          >
            *
          </span>
        </label>
        <input
          id="phone"
          name="phone"
          type="text"
          value=""
        />
        <span
          class="checkoutForm__error"
        />
      </div>
      <div
        class="checkoutForm__field"
      >
        <label
          for="email"
        >
          Email
          <span
            class="required"
          >
            *
          </span>
        </label>
        <input
          id="email"
          name="email"
          type="text"
          value=""
        />
        <span
          class="checkoutForm__error"
        />
      </div>
      <button
        class="checkoutForm__submitButton"
        data-testid="submit-shipping-button"
        type="submit"
      >
        continue to billing
      </button>
    </form>
  </div>
  <div
    class="checkoutForm__section "
  >
    <h2>
      2. Billing
    </h2>
  </div>
  <div
    class="checkoutForm__section "
  >
    <h2>
      3. Payment
    </h2>
  </div>
</div>
`;

exports[`ShippingForm renders properly 1`] = `
<div>
  <form
    class="checkoutForm__form"
    data-testid="shipping-form"
  >
    <div
      class="checkoutForm__field"
    >
      <label
        for="firstName"
      >
        First Name
        <span
          class="required"
        >
          *
        </span>
      </label>
      <input
        id="firstName"
        name="firstName"
        type="text"
        value=""
      />
      <span
        class="checkoutForm__error"
      />
    </div>
    <div
      class="checkoutForm__field"
    >
      <label
        for="lastName"
      >
        Last Name
        <span
          class="required"
        >
          *
        </span>
      </label>
      <input
        id="lastName"
        name="lastName"
        type="text"
        value=""
      />
      <span
        class="checkoutForm__error"
      />
    </div>
    <div
      class="checkoutForm__field"
    >
      <label
        for="addressOne"
      >
        Address Line 1
        <span
          class="required"
        >
          *
        </span>
      </label>
      <input
        id="addressOne"
        name="addressOne"
        type="text"
        value=""
      />
      <span
        class="checkoutForm__error"
      />
    </div>
    <div
      class="checkoutForm__field"
    >
      <label
        for="addressTwo"
      >
        Address Line 2
      </label>
      <input
        id="addressTwo"
        name="addressTwo"
        type="text"
        value=""
      />
      <span
        class="checkoutForm__error"
      />
    </div>
    <div
      class="checkoutForm__field"
    >
      <label
        for="municipality"
      >
        Municipality
        <span
          class="required"
        >
          *
        </span>
      </label>
      <input
        id="municipality"
        name="municipality"
        type="text"
        value=""
      />
      <span
        class="checkoutForm__error"
      />
    </div>
    <div
      class="checkoutForm__field"
    >
      <label
        for="provinceTerritory"
      >
        Province/Territory
        <span
          class="required"
        >
          *
        </span>
      </label>
      <input
        id="provinceTerritory"
        name="provinceTerritory"
        type="text"
        value=""
      />
      <span
        class="checkoutForm__error"
      />
    </div>
    <div
      class="checkoutForm__field"
    >
      <label
        for="postalCode"
      >
        Postal Code
        <span
          class="required"
        >
          *
        </span>
      </label>
      <input
        id="postalCode"
        name="postalCode"
        type="text"
        value=""
      />
      <span
        class="checkoutForm__error"
      />
    </div>
    <h3>
      Shipping Method
    </h3>
    <div>
      <input
        checked=""
        class="checkoutForm__shippingOption"
        id="standard"
        name="shipping"
        type="radio"
        value="standard"
      />
      <label
        for="standard"
      >
        Standard
      </label>
      <input
        class="checkoutForm__shippingOption"
        id="express"
        name="shipping"
        type="radio"
        value="express"
      />
      <label
        for="express"
      >
        Express
      </label>
    </div>
    <div
      class="checkoutForm__field"
    >
      <label
        for="phone"
      >
        Phone Number
        <span
          class="required"
        >
          *
        </span>
      </label>
      <input
        id="phone"
        name="phone"
        type="text"
        value=""
      />
      <span
        class="checkoutForm__error"
      />
    </div>
    <div
      class="checkoutForm__field"
    >
      <label
        for="email"
      >
        Email
        <span
          class="required"
        >
          *
        </span>
      </label>
      <input
        id="email"
        name="email"
        type="text"
        value=""
      />
      <span
        class="checkoutForm__error"
      />
    </div>
    <button
      class="checkoutForm__submitButton"
      data-testid="submit-shipping-button"
      type="submit"
    >
      continue to billing
    </button>
  </form>
</div>
`;
